<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTextView"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:id="@+id/userNameEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/e_mail_adress"
        android:inputType="textEmailAddress"
        android:id="@+id/userEmailEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailEditText"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:id="@+id/passwordAgain"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/passwordAgain"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/registration"
            android:onClick="register"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/cancel"
            android:layout_marginStart="40dp"
            android:onClick="cancel"/>


    </LinearLayout>


</RelativeLayout>